--- a/styles.css
+++ b/styles.css
@@ -1,394 +1,401 @@
-*{
-    font-family: "Inter",serif;
-    padding:0;
-    margin:0;
-    box-sizing:border-box;
+* {
+  font-family: "Inter", serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 a {
-    color:#387ed1;
-    text-decoration: none;
+  color: #387ed1;
+  text-decoration: none;
 }
-h1,h2,h3,h4,h5,h6 {
-    padding: 1rem 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 1rem 0;
 }
 header {
-    position:fixed;
-    top:0;
-    width: 100%;
-    z-index:2;
-    border-bottom: 1px solid #EEE;
-    background-color: #FFF;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid #eee;
+  background-color: #fff;
 }
-.header-container{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width:1000px;
-    margin:0 auto;
-    padding:1.5rem 0;
-    color:#777;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1000px;
+  margin: 0 auto;
+  padding: 1.5rem 0;
+  color: #777;
 }
-.logo{
-    width:140px;
+.logo {
+  width: 140px;
 }
 ul {
-    list-style-type: none;
-    display:flex;
-    font-size:0.9rem;
-    font-weight:300;
+  list-style-type: none;
+  display: flex;
+  font-size: 0.9rem;
+  font-weight: 300;
 }
 li {
-    padding: 0 1.5rem;
-    cursor: pointer;
+  padding: 0 1.5rem;
+  cursor: pointer;
 }
-.body-container{
-    padding-top: 7rem;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-weight:400;
+.body-container {
+  padding-top: 7rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
 }
-.hero{
-    width: 1000px;
-    padding:1rem;
-    object-fit: cover;
+.hero {
+  width: 1000px;
+  padding: 1rem;
+  object-fit: cover;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.btnSignup{
-    padding:0.75rem 2rem;
-    background:#387ED1;
-    border:0;
-    border-radius:0.25rem;
-    color:white;
-    font-size:1.05rem;
-    letter-spacing: 0.05rem;
+.btnSignup {
+  padding: 0.75rem 2rem;
+  background: #387ed1;
+  border: 0;
+  border-radius: 0.25rem;
+  color: white;
+  font-size: 1.05rem;
+  letter-spacing: 0.05rem;
 }
 
 .menu-btn {
-    width: 20px;
-    top: 0px;
-    position:relative;
-    margin:0 auto;
-    cursor:pointer;
+  width: 20px;
+  top: 0px;
+  position: relative;
+  margin: 0 auto;
+  cursor: pointer;
 }
 .menu-btn span {
-    display:block;
-    position:relative;
-    height:2px;
-    width:100%;
-    background:#555;
-    border-radius:1rem;
-    left:0;
+  display: block;
+  position: relative;
+  height: 2px;
+  width: 100%;
+  background: #555;
+  border-radius: 1rem;
+  left: 0;
 }
 
 .menu-btn span:not(:first-child) {
-    margin-top:4px;
+  margin-top: 4px;
 }
 
 .hero-title {
-    letter-spacing: 0.05rem; 
-    padding-top: 3rem; 
-    color: #444; 
-    font-size: 2.6rem; 
-    font-weight: 400;
+  letter-spacing: 0.05rem;
+  padding-top: 3rem;
+  color: #444;
+  font-size: 2.6rem;
+  font-weight: 400;
 }
-.showoff-title{
-    letter-spacing: 0.04rem; 
-    padding-top: 2rem; 
-    color: #444; 
-    font-size: 2rem; 
-    font-weight: 400;
-    padding-bottom: 1rem;
-    
+.showoff-title {
+  letter-spacing: 0.04rem;
+  padding-top: 2rem;
+  color: #444;
+  font-size: 2rem;
+  font-weight: 400;
+  padding-bottom: 1rem;
 }
 .ecosystem-title {
-    letter-spacing: 0.04rem; 
-    padding-top: 2rem; 
-    color: #444; 
-    font-size: 1.8rem; 
-    font-weight: 500;
-    padding-bottom: 1rem;
+  letter-spacing: 0.04rem;
+  padding-top: 2rem;
+  color: #444;
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding-bottom: 1rem;
 }
-.ecosystem-description{
-    letter-spacing: 0.05rem; 
-    color: #444; 
-    padding: 2rem 0; 
-    font-weight: 300; 
-    font-size: 1.2rem; 
-    padding-bottom: 2rem;
-    width:510px;
-    text-align: center;
-
+.ecosystem-description {
+  letter-spacing: 0.05rem;
+  color: #444;
+  padding: 2rem 0;
+  font-weight: 300;
+  font-size: 1.2rem;
+  padding-bottom: 2rem;
+  width: 510px;
+  text-align: center;
 }
-.hero-subtitle{
-    letter-spacing: 0.05rem; color: #444; padding: 2rem 0; font-weight: 300; font-size: 1.2rem; padding-bottom: 2rem
+.hero-subtitle {
+  letter-spacing: 0.05rem;
+  color: #444;
+  padding: 2rem 0;
+  font-weight: 300;
+  font-size: 1.2rem;
+  padding-bottom: 2rem;
 }
-.showoff-subtitle{
-    letter-spacing: 0.05rem; color: #333; padding: 2rem 0; font-weight: 300; font-size: 1rem; 
-    padding-bottom: 0.5rem;
-    
+.showoff-subtitle {
+  letter-spacing: 0.05rem;
+  color: #333;
+  padding: 2rem 0;
+  font-weight: 300;
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
 }
-
 
 .showoff {
-    width:70%;
-    padding:1rem;
-    margin:5rem auto;
-
+  width: 70%;
+  padding: 1rem;
+  margin: 5rem auto;
 }
-.showoff-container{
-    width:100%;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    gap:1rem;
-    align-items: center;
+.showoff-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  align-items: center;
 }
 
 .features-list {
-    list-style-type: disc;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    padding:1rem;
+  list-style-type: disc;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1rem;
 }
 .features-list li {
-    padding:0.5rem 0;
+  padding: 0.5rem 0;
 }
 
-
-.ecosystem{
-    text-align: center;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.ecosystem {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .ecosystem img {
-    width:100%;
-    max-width:850px;
+  width: 100%;
+  max-width: 850px;
 }
 a::after {
-    content: ' →';
+  content: " →";
 }
-.pricing{
-    width:70%;
-    padding:1rem;
-    margin:5rem auto;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.pricing {
+  width: 70%;
+  padding: 1rem;
+  margin: 5rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.pricing-title{
-    letter-spacing: 0.05rem; 
-    padding-top: 3rem; 
-    color: #444; 
-    font-size: 2rem; 
-    font-weight: 400;
+.pricing-title {
+  letter-spacing: 0.05rem;
+  padding-top: 3rem;
+  color: #444;
+  font-size: 2rem;
+  font-weight: 400;
 }
 .pricing-description {
-    letter-spacing: 0.05rem; 
-    color: #444;
-    padding: 2rem 0; 
-    font-weight: 300; 
-    font-size: 1rem; 
-    padding-bottom: 2rem;
-    line-height:1.5
+  letter-spacing: 0.05rem;
+  color: #444;
+  padding: 2rem 0;
+  font-weight: 300;
+  font-size: 1rem;
+  padding-bottom: 2rem;
+  line-height: 1.5;
 }
-.price-container{
-    border:1px solid #CCC;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.5rem;
+.price-container {
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
 }
-.price-container > .container{
-    padding:1rem;
-    width:50%;
-    height:100%;
-    display:grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
+.price-container > .container {
+  padding: 1rem;
+  width: 50%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center;
 }
 .price-container > .container:first-child {
-    border-right:1px solid #CCC
+  border-right: 1px solid #ccc;
 }
 .rupee {
-    font-size:2.75rem;
-    padding:1rem;
-    text-align: center;
+  font-size: 2.75rem;
+  padding: 1rem;
+  text-align: center;
 }
 .price-info {
-    text-align: center;
-    line-height:2;
-    font-weight:300;
-    padding:2rem;
-    padding-top:1rem;
+  text-align: center;
+  line-height: 2;
+  font-weight: 300;
+  padding: 2rem;
+  padding-top: 1rem;
 }
-.rupee::before{
-    content: '₹';
+.rupee::before {
+  content: "₹";
 }
 
 .education {
-    width:70%;
-    padding:1rem;
-    margin:5rem auto;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
+  width: 70%;
+  padding: 1rem;
+  margin: 5rem auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-.education-title{
-    letter-spacing: 0.05rem; 
-    padding-top: 3rem; 
-    color: #444; 
-    font-size: 1.6rem; 
-    font-weight: 400
+.education-title {
+  letter-spacing: 0.05rem;
+  padding-top: 3rem;
+  color: #444;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 .education-description {
-    padding: 1rem 0;
-    font-weight:300;
-    line-height:2;
+  padding: 1rem 0;
+  font-weight: 300;
+  line-height: 2;
 }
-.education img{
-    object-fit: cover;
-    width:100%;
+.education img {
+  object-fit: cover;
+  width: 100%;
 }
 
 footer {
-    padding:1rem 2rem;
-    border-top:1px solid #EEE;
-    background:#FCFCFC;
+  padding: 1rem 2rem;
+  border-top: 1px solid #eee;
+  background: #fcfcfc;
 }
-.footer-container{
-    width:80%;
-    margin:1rem auto;
-    display: grid;
-    color:#555;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+.footer-container {
+  width: 80%;
+  margin: 1rem auto;
+  display: grid;
+  color: #555;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .footer-container > .section {
-    padding:1rem;
+  padding: 1rem;
 }
-.footer-container h1 {
-    font-size:1.1rem;
-    font-weight:500;
+.footer-container h2 {
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 .footer-container ul {
-    display: block;
+  display: block;
 }
 .footer-container ul li {
-    padding:0.5rem 0;
-    font-weight:400;
-    color:#666;
-
+  padding: 0.5rem 0;
+  font-weight: 400;
+  color: #666;
 }
 
 .smallprint {
-    width:80%;
-    margin:1rem auto;
-    color:#AAA;
-    font-size:0.7rem;
-    display:flex;   
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    line-height:2;
+  width: 80%;
+  margin: 1rem auto;
+  color: #aaa;
+  font-size: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  line-height: 2;
 }
 .smallprint p {
-    padding:0.25rem;
+  padding: 0.25rem;
 }
-.pricing-one{
-    width: 50%; 
-    padding: 1rem
+.pricing-one {
+  width: 50%;
+  padding: 1rem;
 }
-.open-account-title{
-    font-weight: 400; 
-    font-size: 2rem;
+.open-account-title {
+  font-weight: 400;
+  font-size: 2rem;
 }
 @media only screen and (max-width: 600px) {
-    .header-container {
-        width:100%;
-        padding:1rem 1.5rem;
-        margin:0;
-    }
-    ul{
-        display:block
-    }
-    .header-container ul li {
-        display: none;
-      }
-      
-    .header-container  > li:nth-of-type(6) {
-        display: block;
-        padding:0;
-      }
-    .logo{  
-        width:100px;
-    }
-    .hero{
-        width:100%;
-    }
-    .hero-title,
-    .hero-subtitle {
-        text-align: center;
-    }
-    .hero-subtitle {
-        padding:1rem;
-        line-height: 1.7;
-        letter-spacing:0;
-    }
-    .showoff-container{
-        grid-template-columns: 1fr;
-    }
-    .pricing {
-        width:100%;
-        flex-direction: column;
-    }
-    .pricing-one{
-        width:100%;
-    }
-    .showoff {
-        width:100%;
-    }
-    .education{
-        width:100%;
-        grid-template-columns: 1fr;
-    }
-    .footer-container{
-        width:100%;
-        grid-template-columns: 1fr;
-    }
-    .smallprint {
-        width:100%;
-    }
-    .price-container{
-        flex-direction: column;
-    }
-    .price-container .container {
-        width:100%;
-    }
-    .price-container > .container:first-child {
-        border-right:0;
-        border-bottom:1px solid #CCC
-    }
-    .header-container > ul > li:nth-of-type(6) {
-        display: block;
-        padding:0;
-      }
-    .ecosystem-description{
-        width:100%;
-    }
-    .pricing-description {
-        width:100%;
-    }
-    .features-list{
-        grid-template-columns: 1fr;
-    }
-    .open-account-title{
-        padding:1rem;
-        font-size:1.6rem;
-    }
+  .header-container {
+    width: 100%;
+    padding: 1rem 1.5rem;
+    margin: 0;
+  }
+  ul {
+    display: block;
+  }
+  .header-container ul li {
+    display: none;
+  }
+
+  .header-container > li:nth-of-type(6) {
+    display: block;
+    padding: 0;
+  }
+  .logo {
+    width: 100px;
+  }
+  .hero {
+    width: 100%;
+  }
+  .hero-title,
+  .hero-subtitle {
+    text-align: center;
+  }
+  .hero-subtitle {
+    padding: 1rem;
+    line-height: 1.7;
+    letter-spacing: 0;
+  }
+  .showoff-container {
+    grid-template-columns: 1fr;
+  }
+  .pricing {
+    width: 100%;
+    flex-direction: column;
+  }
+  .pricing-one {
+    width: 100%;
+  }
+  .showoff {
+    width: 100%;
+  }
+  .education {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+  .footer-container {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+  .smallprint {
+    width: 100%;
+  }
+  .price-container {
+    flex-direction: column;
+  }
+  .price-container .container {
+    width: 100%;
+  }
+  .price-container > .container:first-child {
+    border-right: 0;
+    border-bottom: 1px solid #ccc;
+  }
+  .header-container > ul > li:nth-of-type(6) {
+    display: block;
+    padding: 0;
+  }
+  .ecosystem-description {
+    width: 100%;
+  }
+  .pricing-description {
+    width: 100%;
+  }
+  .features-list {
+    grid-template-columns: 1fr;
+  }
+  .open-account-title {
+    padding: 1rem;
+    font-size: 1.6rem;
+  }
 }
